main container cols

--- a/index.html
+++ b/index.html
@@ -12,7 +12,23 @@
     <title>Boolzapp</title>
 </head>
 <body>
-    
+    <main>
+        <div id="app" class="w-100 vh-100">
+            <div class="container h-100 pt-3 pb-3">
+                <div class="row h-100">
+                    <div class="col-4 border1">
+                        <div class="row flex-column h-100 ">
+                            <div class="col-auto ">Utente</div>
+                            <div class="col-auto ">Notifiche</div>
+                            <div class="col-auto ">Ricerca</div>
+                            <div class="col-auto  flex-grow-1 ">Contatti</div>
+                        </div>
+                    </div>
+                    <div class="col-8 border1">right</div>
+                </div>
+            </div>
+        </div>
+    </main>
 
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script src="js/script.js"></script>
