--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <div class="row h-100">
                     <div class="col-4 border1">
                         <div class="row flex-column h-100 ">
-                            <div class="col-auto ">Utente</div>
-                            <div class="col-auto ">Notifiche</div>
-                            <div class="col-auto ">Ricerca</div>
-                            <div class="col-auto  flex-grow-1 ">Contatti</div>
+                            <div class="col-auto side-user">Utente</div>
+                            <div class="col-auto side-notification">Notifiche</div>
+                            <div class="col-auto side-research">Ricerca</div>
+                            <div class="col-auto side-contact-list flex-grow-1 ">Contatti</div>
                         </div>
                     </div>
                     <div class="col-8 border1">right</div>
