chat-panel settings

--- a/index.html
+++ b/index.html
@@ -17,14 +17,20 @@
             <div class="container h-100 pt-3 pb-3">
                 <div class="row h-100">
                     <div class="col-4 border1">
-                        <div class="row flex-column h-100 ">
+                        <div class="row flex-column h-100">
                             <div class="col-auto side-user">Utente</div>
                             <div class="col-auto side-notification">Notifiche</div>
-                            <div class="col-auto side-research">Ricerca</div>
+                            <div class="col-auto side-research ">Ricerca</div>
                             <div class="col-auto side-contact-list flex-grow-1 ">Contatti</div>
                         </div>
                     </div>
-                    <div class="col-8 border1">right</div>
+                    <div class="col-8 border1">
+                        <div class="row flex-column h-100 chat-bg">
+                            <div class="col-auto chat-user">top</div>
+                            <div class="col-auto flex-grow-1 chat-main">middle</div>
+                            <div class="col-auto chat-type-bar">bottom</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
