--- a/index.html
+++ b/index.html
@@ -18,7 +18,19 @@
                 <div class="row h-100">
                     <div class="col-4 border1">
                         <div class="row flex-column h-100">
-                            <div class="col-auto side-user">Utente</div>
+                            <div class="col-auto side-user pt-1 pb-1 d-flex justify-content-between ">
+                                <div class="user-img">
+                                    <img src="img/avatar_1.jpg" alt="User avatar">
+                                    <span class="user-name fw-bold">
+                                        Utente
+                                    </span>
+                                </div>
+                                <div class="icons-functions d-flex align-items-center gap-2 ">
+                                    <i class="fa-solid fa-circle-notch"></i>
+                                    <i class="fa-solid fa-message"></i>
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                </div>
+                            </div>
                             <div class="col-auto side-notification">Notifiche</div>
                             <div class="col-auto side-research ">Ricerca</div>
                             <div class="col-auto side-contact-list flex-grow-1 ">Contatti</div>
