--- a/index.html
+++ b/index.html
@@ -31,7 +31,33 @@
                                     <i class="fa-solid fa-ellipsis-vertical"></i>
                                 </div>
                             </div>
-                            <div class="col-auto side-notification">Notifiche</div>
+                            <div class="col-auto side-notification">
+                                <div class="row">
+                                    <div class="col-auto d-flex align-items-center ">
+                                        <i class="fa-solid fa-bell-slash"></i>
+
+                                    </div>
+                                    <div class="col-auto d-flex flex-column">
+                                        <span class="fw-bold ">
+                                            Ricevi notifiche di nuovi messaggi
+                                        </span>
+                                        <a href="#" class="text-muted">
+                                            Attiva notifiche desktop
+                                        </a>
+                                    </div>
+                                </div>
+                                <!-- <div class="notification-icon">
+                                    <i class="fa-solid fa-bell-slash"></i>
+                                </div>
+                                <div class="notification-text d-flex ">
+                                    <span>
+                                        Ricevi notifivhe di nuovi messaggi
+                                    </span>
+                                    <a href="#">
+                                        Attiva notifiche desktop
+                                    </a>
+                                </div> -->
+                            </div>
                             <div class="col-auto side-research ">Ricerca</div>
                             <div class="col-auto side-contact-list flex-grow-1 ">Contatti</div>
                         </div>
