research bar section

--- a/index.html
+++ b/index.html
@@ -45,19 +45,17 @@
                                         </a>
                                     </div>
                                 </div>
-                                <!-- <div class="notification-icon">
-                                    <i class="fa-solid fa-bell-slash"></i>
-                                </div>
-                                <div class="notification-text d-flex ">
-                                    <span>
-                                        Ricevi notifivhe di nuovi messaggi
-                                    </span>
-                                    <a href="#">
-                                        Attiva notifiche desktop
-                                    </a>
-                                </div> -->
                             </div>
-                            <div class="col-auto side-research ">Ricerca</div>
+                            <div class="col-auto side-research ">
+                                <div class="row">
+                                    <div class="col-12 d-flex justify-content-center align-items-center ">
+                                        <div class="input-group input-group-sm  pt-1 pb-1">
+                                            <span class="input-group-text search" id=""><i class="fa-solid fa-magnifying-glass"></i></span>
+                                            <input type="text" class="form-control" placeholder="*Search">
+                                          </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-auto side-contact-list flex-grow-1 ">Contatti</div>
                         </div>
                     </div>
