--- a/index.html
+++ b/index.html
@@ -56,7 +56,70 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-auto side-contact-list flex-grow-1 ">Contatti</div>
+                            <div class="col-auto side-contact-list flex-grow-1 ">
+                                <div class="row d-flex pt-3">
+                                    <div class="col-auto">
+                                        <div class="contact-img">
+                                            <img src="img/avatar_2.jpg" alt="Contact img-1">
+                                        </div>
+                                    </div>
+                                    <div class="col-auto d-flex flex-column ">
+                                        <span class="fw-bold">Utente</span>
+                                        <span class="text-muted small">Ultimo Messaggio Inviato</span>
+                                    </div>
+                                    <div class="col-auto">
+                                        <span class="text-muted small">12:00</span>
+                                    </div>
+                                    <div class="col-auto">
+                                        <div class="contact-img">
+                                            <img src="img/avatar_3.jpg" alt="Contact img-1">
+                                        </div>
+                                    </div>
+                                    <div class="col-auto d-flex flex-column ">
+                                        <span class="fw-bold">Utente</span>
+                                        <span class="text-muted small">Ultimo Messaggio Inviato</span>
+                                    </div>
+                                    <div class="col-auto">
+                                        <span class="text-muted small">12:00</span>
+                                    </div>
+                                    <div class="col-auto">
+                                        <div class="contact-img">
+                                            <img src="img/avatar_4.jpg" alt="Contact img-1">
+                                        </div>
+                                    </div>
+                                    <div class="col-auto d-flex flex-column ">
+                                        <span class="fw-bold">Utente</span>
+                                        <span class="text-muted small">Ultimo Messaggio Inviato</span>
+                                    </div>
+                                    <div class="col-auto">
+                                        <span class="text-muted small">12:00</span>
+                                    </div>
+                                    <div class="col-auto">
+                                        <div class="contact-img">
+                                            <img src="img/avatar_5.jpg" alt="Contact img-1">
+                                        </div>
+                                    </div>
+                                    <div class="col-auto d-flex flex-column ">
+                                        <span class="fw-bold">Utente</span>
+                                        <span class="text-muted small">Ultimo Messaggio Inviato</span>
+                                    </div>
+                                    <div class="col-auto">
+                                        <span class="text-muted small">12:00</span>
+                                    </div>
+                                    <div class="col-auto">
+                                        <div class="contact-img">
+                                            <img src="img/avatar_6.jpg" alt="Contact img-1">
+                                        </div>
+                                    </div>
+                                    <div class="col-auto d-flex flex-column ">
+                                        <span class="fw-bold">Utente</span>
+                                        <span class="text-muted small">Ultimo Messaggio Inviato</span>
+                                    </div>
+                                    <div class="col-auto">
+                                        <span class="text-muted small">12:00</span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-8 border1">
