contact list md query

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="app" class="w-100 vh-100">
             <div class="container h-100 pt-3 pb-3">
                 <div class="row h-100">
-                    <div class="col-4 border1">
+                    <div class="col-4">
                         <div class="row flex-column h-100">
                             <div class="col-auto side-user pt-1 pb-1 d-flex justify-content-between ">
                                 <div class="user-img">
@@ -57,68 +57,66 @@
                                 </div>
                             </div>
                             <div class="col-auto side-contact-list flex-grow-1 ">
-                                <div class="row d-flex pt-3">
-                                    <div class="col-auto">
+                                <div class="row d-flex pt-3 flex-nowrap ">
+                                    <div class="col-auto col-md-2 ">
                                         <div class="contact-img">
                                             <img src="img/avatar_2.jpg" alt="Contact img-1">
                                         </div>
                                     </div>
-                                    <div class="col-auto d-flex flex-column ">
-                                        <span class="fw-bold">Utente</span>
-                                        <span class="text-muted small">Ultimo Messaggio Inviato</span>
+                                    <div class="col-auto col-md-7 d-flex flex-column ">
+                                        <span class="fw-bold small">Utente</span>
+                                        <span class="text-muted small-text">Ultimo Messaggio Inviato</span>
                                     </div>
-                                    <div class="col-auto">
+                                    <div class="col-auto col-md-3 ">
                                         <span class="text-muted small">12:00</span>
                                     </div>
-                                    <div class="col-auto">
+                                </div>
+
+                                <div class="row d-flex pt-3 flex-nowrap ">
+                                    <div class="col-auto col-md-2">
                                         <div class="contact-img">
                                             <img src="img/avatar_3.jpg" alt="Contact img-1">
                                         </div>
                                     </div>
-                                    <div class="col-auto d-flex flex-column ">
-                                        <span class="fw-bold">Utente</span>
-                                        <span class="text-muted small">Ultimo Messaggio Inviato</span>
+                                    <div class="col-auto d-flex col-md-7 flex-column ">
+                                        <span class="fw-bold small">Utente</span>
+                                        <span class="text-muted small-text">Ultimo Messaggio Inviato</span>
                                     </div>
-                                    <div class="col-auto">
+                                    <div class="col-auto col-md-3">
                                         <span class="text-muted small">12:00</span>
                                     </div>
-                                    <div class="col-auto">
+                                </div>
+
+                                <div class="row d-flex pt-3 flex-nowrap ">
+                                    <div class="col-auto col-md-2">
                                         <div class="contact-img">
                                             <img src="img/avatar_4.jpg" alt="Contact img-1">
                                         </div>
                                     </div>
-                                    <div class="col-auto d-flex flex-column ">
-                                        <span class="fw-bold">Utente</span>
-                                        <span class="text-muted small">Ultimo Messaggio Inviato</span>
+                                    <div class="col-auto d-flex col-md-7 flex-column">
+                                        <span class="fw-bold small">Utente</span>
+                                        <span class="text-muted small-text">Ultimo Messaggio Inviato</span>
                                     </div>
-                                    <div class="col-auto">
+                                    <div class="col-auto col-md-3">
                                         <span class="text-muted small">12:00</span>
                                     </div>
-                                    <div class="col-auto">
+                                </div>
+
+                                <div class="row d-flex pt-3 flex-nowrap ">
+                                    <div class="col-auto col-md-2">
                                         <div class="contact-img">
                                             <img src="img/avatar_5.jpg" alt="Contact img-1">
                                         </div>
                                     </div>
-                                    <div class="col-auto d-flex flex-column ">
-                                        <span class="fw-bold">Utente</span>
-                                        <span class="text-muted small">Ultimo Messaggio Inviato</span>
+                                    <div class="col-auto d-flex col-md-7 flex-column ">
+                                        <span class="fw-bold small">Utente</span>
+                                        <span class="text-muted small-text">Ultimo Messaggio Inviato</span>
                                     </div>
-                                    <div class="col-auto">
-                                        <span class="text-muted small">12:00</span>
-                                    </div>
-                                    <div class="col-auto">
-                                        <div class="contact-img">
-                                            <img src="img/avatar_6.jpg" alt="Contact img-1">
-                                        </div>
-                                    </div>
-                                    <div class="col-auto d-flex flex-column ">
-                                        <span class="fw-bold">Utente</span>
-                                        <span class="text-muted small">Ultimo Messaggio Inviato</span>
-                                    </div>
-                                    <div class="col-auto">
+                                    <div class="col-auto col-md-3">
                                         <span class="text-muted small">12:00</span>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
