scrollbar contact-list

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-auto side-contact-list flex-grow-1 ">
+                            <div class="col-auto side-contact-list flex-grow-1 my-y-scrollbar">
                                 <div class="row d-flex pt-3 flex-nowrap ">
                                     <div class="col-auto col-md-2 ">
                                         <div class="contact-img">
@@ -102,6 +102,76 @@
                                     </div>
                                 </div>
 
+                                <div class="row d-flex pt-3 flex-nowrap ">
+                                    <div class="col-auto col-md-2">
+                                        <div class="contact-img">
+                                            <img src="img/avatar_5.jpg" alt="Contact img-1">
+                                        </div>
+                                    </div>
+                                    <div class="col-auto d-flex col-md-7 flex-column ">
+                                        <span class="fw-bold small">Utente</span>
+                                        <span class="text-muted small-text">Ultimo Messaggio Inviato</span>
+                                    </div>
+                                    <div class="col-auto col-md-3">
+                                        <span class="text-muted small">12:00</span>
+                                    </div>
+                                </div>
+                                <div class="row d-flex pt-3 flex-nowrap ">
+                                    <div class="col-auto col-md-2">
+                                        <div class="contact-img">
+                                            <img src="img/avatar_5.jpg" alt="Contact img-1">
+                                        </div>
+                                    </div>
+                                    <div class="col-auto d-flex col-md-7 flex-column ">
+                                        <span class="fw-bold small">Utente</span>
+                                        <span class="text-muted small-text">Ultimo Messaggio Inviato</span>
+                                    </div>
+                                    <div class="col-auto col-md-3">
+                                        <span class="text-muted small">12:00</span>
+                                    </div>
+                                </div>
+                                <div class="row d-flex pt-3 flex-nowrap ">
+                                    <div class="col-auto col-md-2">
+                                        <div class="contact-img">
+                                            <img src="img/avatar_5.jpg" alt="Contact img-1">
+                                        </div>
+                                    </div>
+                                    <div class="col-auto d-flex col-md-7 flex-column ">
+                                        <span class="fw-bold small">Utente</span>
+                                        <span class="text-muted small-text">Ultimo Messaggio Inviato</span>
+                                    </div>
+                                    <div class="col-auto col-md-3">
+                                        <span class="text-muted small">12:00</span>
+                                    </div>
+                                </div>
+                                <div class="row d-flex pt-3 flex-nowrap ">
+                                    <div class="col-auto col-md-2">
+                                        <div class="contact-img">
+                                            <img src="img/avatar_5.jpg" alt="Contact img-1">
+                                        </div>
+                                    </div>
+                                    <div class="col-auto d-flex col-md-7 flex-column ">
+                                        <span class="fw-bold small">Utente</span>
+                                        <span class="text-muted small-text">Ultimo Messaggio Inviato</span>
+                                    </div>
+                                    <div class="col-auto col-md-3">
+                                        <span class="text-muted small">12:00</span>
+                                    </div>
+                                </div>
+                                <div class="row d-flex pt-3 flex-nowrap ">
+                                    <div class="col-auto col-md-2">
+                                        <div class="contact-img">
+                                            <img src="img/avatar_5.jpg" alt="Contact img-1">
+                                        </div>
+                                    </div>
+                                    <div class="col-auto d-flex col-md-7 flex-column ">
+                                        <span class="fw-bold small">Utente</span>
+                                        <span class="text-muted small-text">Ultimo Messaggio Inviato</span>
+                                    </div>
+                                    <div class="col-auto col-md-3">
+                                        <span class="text-muted small">12:00</span>
+                                    </div>
+                                </div>
                                 <div class="row d-flex pt-3 flex-nowrap ">
                                     <div class="col-auto col-md-2">
                                         <div class="contact-img">
