User bar in chat panel

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <div class="row d-flex pt-3 flex-nowrap ">
                                     <div class="col-auto col-md-2">
                                         <div class="contact-img">
-                                            <img src="img/avatar_5.jpg" alt="Contact img-1">
+                                            <img src="img/avatar_6.jpg" alt="Contact img-1">
                                         </div>
                                     </div>
                                     <div class="col-auto d-flex col-md-7 flex-column ">
@@ -133,7 +133,7 @@
                                 <div class="row d-flex pt-3 flex-nowrap ">
                                     <div class="col-auto col-md-2">
                                         <div class="contact-img">
-                                            <img src="img/avatar_5.jpg" alt="Contact img-1">
+                                            <img src="img/avatar_7.jpg" alt="Contact img-1">
                                         </div>
                                     </div>
                                     <div class="col-auto d-flex col-md-7 flex-column ">
@@ -147,7 +147,7 @@
                                 <div class="row d-flex pt-3 flex-nowrap ">
                                     <div class="col-auto col-md-2">
                                         <div class="contact-img">
-                                            <img src="img/avatar_5.jpg" alt="Contact img-1">
+                                            <img src="img/avatar_8.jpg" alt="Contact img-1">
                                         </div>
                                     </div>
                                     <div class="col-auto d-flex col-md-7 flex-column ">
@@ -161,7 +161,7 @@
                                 <div class="row d-flex pt-3 flex-nowrap ">
                                     <div class="col-auto col-md-2">
                                         <div class="contact-img">
-                                            <img src="img/avatar_5.jpg" alt="Contact img-1">
+                                            <img src="img/avatar_1.jpg" alt="Contact img-1">
                                         </div>
                                     </div>
                                     <div class="col-auto d-flex col-md-7 flex-column ">
@@ -175,7 +175,7 @@
                                 <div class="row d-flex pt-3 flex-nowrap ">
                                     <div class="col-auto col-md-2">
                                         <div class="contact-img">
-                                            <img src="img/avatar_5.jpg" alt="Contact img-1">
+                                            <img src="img/avatar_3.jpg" alt="Contact img-1">
                                         </div>
                                     </div>
                                     <div class="col-auto d-flex col-md-7 flex-column ">
@@ -190,9 +190,24 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-8 border1">
+                    <div class="col-8">
                         <div class="row flex-column h-100 chat-bg">
-                            <div class="col-auto chat-user">top</div>
+                            <div class="col-auto chat-user">
+                                <div class="row d-flex p-1 border-left-1">
+                                    <div class="col-auto">
+                                        <img src="img/avatar_4.jpg" alt="">
+                                    </div>
+                                    <div class="col-auto">
+                                        <p class="fw-bold small">Utente</span>
+                                        <p class="text-muted small-text">Ultimo Accesso Oggi Alle 12:00</span>
+                                    </div>
+                                    <div class="col-auto ms-auto d-flex justify-content-center align-items-center gap-2">
+                                        <i class="fa-solid fa-magnifying-glass"></i>
+                                        <i class="fa-solid fa-paperclip"></i>
+                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-auto flex-grow-1 chat-main">middle</div>
                             <div class="col-auto chat-type-bar">bottom</div>
                         </div>
