main chat panel

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                     <i class="fa-solid fa-ellipsis-vertical"></i>
                                 </div>
                             </div>
-                            <div class="col-auto side-notification">
+                            <div class="col-auto side-notification pt-1 pb-1">
                                 <div class="row">
                                     <div class="col-auto d-flex align-items-center ">
                                         <i class="fa-solid fa-bell-slash"></i>
@@ -208,7 +208,20 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-auto flex-grow-1 chat-main">middle</div>
+                            <div class="col-auto flex-grow-1 chat-main p-5">
+                                <div class="col-auto d-flex flex-row-reverse mb-4">
+                                    <div class="sent">
+                                        <span class="msg">Hai portato a spasso il cane?</span>
+                                        <span class="data">12:00</span>
+                                    </div>
+                                </div>
+                                <div class="col-auto d-flex mt-4">
+                                    <div class="received">
+                                        <span class="msg">Tutto fatto!</span>
+                                        <span class="data">12:00</span>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-auto chat-type-bar">bottom</div>
                         </div>
                     </div>
