--- a/index.html
+++ b/index.html
@@ -222,7 +222,20 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-auto chat-type-bar">bottom</div>
+                            <div class="col-auto chat-type-bar">
+                                <div class="row d-flex justify-content-between align-items-center ">
+                                    <div class="col-auto">
+                                        <i class="fa-solid fa-face-smile"></i>
+                                    </div>
+                                    <div class="col-auto flex-grow-1 p-2">
+                                          <input type="text"
+                                              class="form-control form-control-sm" name="" id="" placeholder="    Scrivi un messaggio">
+                                    </div>
+                                    <div class="col-auto">
+                                        <i class="fa-solid fa-microphone"></i>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
