--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
     </main>
 
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-<script src="js/script.js"></script>
+<script src="js/script.js" type="module"></script>
 </body>
 </html>
